--- a/MyApplication/app/src/main/assets/ExampleAppNew.html
+++ b/MyApplication/app/src/main/assets/ExampleAppNew.html
@@ -8,14 +8,16 @@
 		h1 { color:steelblue; font-size:24px; margin-top:24px; }
 		button { margin:0 3px 10px; font-size:12px; }
 		.logLine { border-bottom:1px solid #ccc; padding:4px 2px; font-family:courier; font-size:11px; }
+		html, body {background-color: transparent;}
 
     </style>
 </head>
-<body>
+<img>
 <h1>WebViewJavascriptBridge Demo</h1>
 
 <div id='buttons'></div>
 <div id='log'></div>
+<img src="http://aa">aaaa </img>
 <script>
 	window.onerror = function(err) {
 		log('window.onerror: ' + err)
